Show provider lookup search button disabled text when the form is invalid
#7058: Create the search provider UI that will interface with PLS API

--- a/client/app/provider/tmpl/provider-lookup-search.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-search.tpl.html
@@ -212,7 +212,7 @@
                                     <strong>Search</strong>
                                 </button>
                             </div>
-                            <div class="col-sm-8" ng-show="providerSearchForm.$invalid && providerSearchForm.$dirty">
+                            <div class="col-sm-8" ng-show="providerSearchForm.$invalid">
                                 <div class="info-blue italic m-b">
                                     Please complete ALL required fields to activate Search.
                                 </div>
