Style edit to login template and provider-lookup-serach template
#7058: Create the search provider UI that will interface with PLS API

--- a/client/app/access/tmpl/login.tpl.html
+++ b/client/app/access/tmpl/login.tpl.html
@@ -20,13 +20,13 @@
                             <div class="col-md-5">
                                 <h1 class="font-bold">Take control of your health and well being with the HIE Patient Portal.</h1>
                             </div>
-                            <div class="col-md-7">
-                                <div class="ibox-content">
+                            <div class="col-md-7 skin-1">
+                                <div class="ibox-content img-circle">
                                     <form class="form-horizontal m-t" role="form" >
                                         <h2 class="font-bold">Register Today!</h2>
                                         <small> To register for the HIE Patient Portal, please contact your provider’s and ask about an HIE Patient Portal Account.</small>
-                                        <div class="form-group">
-                                            <div class="row">
+                                        <div class="form-group m-t">
+                                            <div class="">
                                                 <label class="col-lg-4 control-label no-padding-right" for="userName">User name</label>
                                                 <div class="col-lg-8">
                                                     <input type="text" class=" form-control" id="userName" placeholder="Username" data-ng-model="loginVm.loginData.userName" required autofocus>
@@ -34,7 +34,7 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                           <div class="row">
+                                           <div class="">
                                                <label class="col-lg-4 control-label no-padding-right" for="password">Password</label>
                                                <div class="col-lg-8">
                                                    <input type="password" id="password" class="form-control" placeholder="Password" data-ng-model="loginVm.loginData.password" required>
