--- a/client/app/provider/tmpl/provider-lookup-result.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-result.tpl.html
@@ -28,7 +28,7 @@
         <div class="col-md-6" ng-if="!isEmptyResult()">
             <div class="panel panel-default" ng-repeat="provider in providerLookupResult.providers">
                 <div class="panel-heading">
-                    <h4>{{getProviderName(provider)}}&nbsp;<span>[NPI: {{provider.npi}}]</span></h4>
+                    <h4>{{provider | plsName}}&nbsp;<span>[NPI: {{provider.npi}}]</span></h4>
                     <button type="button" class="btn btn-xs btn-primary dark-green"
                             ng-click="addProvider(provider.npi)"><i class="fa fa-plus"></i></button>
                     &nbsp;Add this Provider.
@@ -36,9 +36,9 @@
                 <div class="panel-body">
                     <p>{{provider.healthcareProviderTaxonomy_1}}</p>
 
-                    <p>{{getProviderAddress(provider)}}</p>
+                    <p>{{provider | plsAddress}}</p>
 
-                    <p>{{formatPhoneNumber(provider.providerBusinessPracticeLocationAddressTelephoneNumber)}}</p>
+                    <p>{{provider.providerBusinessPracticeLocationAddressTelephoneNumber | phone}}</p>
                 </div>
             </div>
         </div>
