Add class bg-color-blue,  to solve contrast errors on provider lookup search page
#7058 - Create the search provider UI that will interface with PLS API

--- a/client/app/provider/tmpl/provider-lookup-search.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-search.tpl.html
@@ -97,7 +97,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="alert alert-info">
-                                    <span class="btn btn-success btn-circle">2</span>&nbsp;<b>Step 2.</b> Please enter
+                                    <span class="btn btn-success bg-color-blue btn-circle">2</span>&nbsp;<b>Step 2.</b> Please enter
                                     the
                                     <b>Facility Name</b> OR <b>Provider Name and
                                     Other Criteria</b>.
