Remove the unnecessary HTTP headers in the app.js. Update the name of the filters in the view
#7057 - Create manage providers UI that interfaces with Patient Consent Management AP

--- a/client/app/provider/tmpl/provider-delete-modal.tpl.html
+++ b/client/app/provider/tmpl/provider-delete-modal.tpl.html
@@ -3,7 +3,7 @@
         <h4 class="modal-title">Delete Provider</h4>
     </div>
     <div class="modal-body">
-        <p>Are you sure you want to delete {{ provider | nameorfacility}} provider?</p>
+        <p>Are you sure you want to delete {{ provider | pcmProviderNameOrFacility}} provider?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white" ng-click="cancel()">Cancel</button>
