HTML edits to  provider-lookup-serach template
#7058: Create the search provider UI that will interface with PLS API

--- a/client/app/provider/tmpl/provider-lookup-search.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-search.tpl.html
@@ -212,19 +212,19 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="row">
-                            <div class="col-xs-6 col-sm-2">
+                            <div class="col-xs-5 col-sm-3 col-lg-2">
                                 <button class="btn btn-block btn-sm m-r" type="reset" ng-click="reset()">Clear
                                     All
                                 </button>
                             </div>
-                            <div class="col-xs-6 col-sm-2">
+                            <div class="col-xs-5 col-sm-3 col-lg-2">
                                 <button class="btn btn-block btn-sm btn-primary dark-green" type="button"
                                         ng-click="lookupProvider(firstPage)"
                                         ng-disabled="providerSearchForm.$invalid">
                                     <strong>Search</strong>
                                 </button>
                             </div>
-                            <div class="col-sm-8" ng-show="providerSearchForm.$invalid">
+                            <div class="col-xs-12 col-sm-6 col-lg-8" ng-show="providerSearchForm.$invalid">
                                 <div class="info-blue italic m-b">
                                     Please complete ALL required fields to activate Search.
                                 </div>
