Add screen reader only tag to button value to solve empty button 508 validation. Fix all contrast errors and major errors on search result page
#7058 - Create the search provider UI that will interface with PLS API

--- a/client/app/provider/tmpl/provider-lookup-result.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-result.tpl.html
@@ -37,7 +37,10 @@
                 <div class="panel-heading">
                     <h4>{{provider | plsName}}&nbsp;<span>[NPI: {{provider.npi}}]</span></h4>
                     <button type="button" class="btn btn-xs btn-primary dark-green"
-                            ng-click="ProviderLookupResultVm.addProvider(provider.npi)"><i class="fa fa-plus"></i>
+                            ng-click="ProviderLookupResultVm.addProvider(provider.npi)">
+                            <i class="fa fa-plus">
+                                <span class="sr-only">Add Provider</span>
+                            </i>
                     </button>
                     &nbsp;Add this Provider.
                 </div>
