Use notificationService for user feedback on provider lookup search, results and add errors
#7058: Create the search provider UI that will interface with PLS API

--- a/client/app/provider/tmpl/provider-lookup-search.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-search.tpl.html
@@ -1,10 +1,5 @@
 <div>
     <div class="row">
-        <div class="col-sm-12" ng-if="ProviderLookupSearchVm.error">
-            <div class="alert alert-danger">Internal server error.</div>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-sm-12" id="provider_lookup_search">
             <div class="ibox panel panel-darkblue float-e-margins">
                 <div class="ibox-title  modified panel-heading">
@@ -104,7 +99,8 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="alert alert-info">
-                                    <span class="btn btn-success bg-color-blue btn-circle">2</span>&nbsp;<b>Step 2.</b> Please enter
+                                    <span class="btn btn-success bg-color-blue btn-circle">2</span>&nbsp;<b>Step 2.</b>
+                                    Please enter
                                     the
                                     <b>Facility Name</b> OR <b>Provider Name and
                                     Other Criteria</b>.
