--- a/client/app/provider/tmpl/provider-lookup-search.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-search.tpl.html
@@ -12,7 +12,8 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="alert alert-info">
-                                    <span class="btn btn-success btn-circle bg-color-blue">1</span>&nbsp;<b>Step 1.</b> Please enter
+                                    <span class="btn btn-success btn-circle bg-color-blue">1</span>&nbsp;<b>Step 1.</b>
+                                    Please enter
                                     the
                                     provider <b>State and City</b> OR <b>Zip Code</b>.
                                 </div>
@@ -20,7 +21,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-5"
-                                 ng-class="{'light-grey': providerSearchForm.providerZipCode.$viewValue}">
+                                 ng-class="{'light-grey': ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerZipCode')}">
                                 <h3 class="m-t-none m-b">Enter State and City.</h3>
 
                                 <div class="form-group">
@@ -28,7 +29,7 @@
                                     <select id="state" class="form-control m-b" name="providerState"
                                             ng-model="ProviderLookupSearchVm.plsQueryParameters.usstate"
                                             ng-change="ProviderLookupSearchVm.usstateChanged()"
-                                            ng-disabled="providerSearchForm.providerZipCode.$viewValue"
+                                            ng-disabled="ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerZipCode')"
                                             ng-required="!ProviderLookupSearchVm.plsQueryParameters.zipcode">
                                         <option value="">-- Please Select --</option>
                                         <option value="DC">DISTRICT OF COLUMBIA</option>
@@ -41,7 +42,7 @@
                                         <div ng-message="required">Required</div>
                                     </div>-->
                                     <div class="info-blue italic m-b"
-                                         ng-if="providerSearchForm.providerZipCode.$viewValue">
+                                         ng-if="ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerZipCode')">
                                         Please clear "Enter Zip Code" information to add "Enter State and City"
                                         information.
                                     </div>
@@ -67,7 +68,7 @@
                                 <p>OR</p>
                             </div>
                             <div class="col-sm-5"
-                                 ng-class="{'light-grey': providerSearchForm.providerState.$viewValue}">
+                                 ng-class="{'light-grey': ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerState')}">
                                 <h3 class="m-t-none m-b">Enter Zip Code</h3>
 
                                 <div class="row">
@@ -76,7 +77,7 @@
                                         <Input class="form-control m-b" type="text" name="providerZipCode"
                                                placeholder="Enter Zip Code"
                                                ng-model="ProviderLookupSearchVm.plsQueryParameters.zipcode"
-                                               ng-disabled="providerSearchForm.providerState.$viewValue"
+                                               ng-disabled="ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerState')"
                                                ng-pattern="/^\d{5}(?:[-\s]\d{4})?$/"
                                                ng-required="!ProviderLookupSearchVm.plsQueryParameters.usstate"/>
 
@@ -89,7 +90,7 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-12 info-blue italic m-b m-t-n"
-                                         ng-if="providerSearchForm.providerState.$viewValue">
+                                         ng-if="ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerState')">
                                         Please clear "Enter State and City" information to add "Enter Zip Code"
                                         information.
                                     </div>
@@ -109,7 +110,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-5"
-                                 ng-class="{'light-grey': providerSearchForm.providerFacilityName.$viewValue}">
+                                 ng-class="{'light-grey': ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerFacilityName')}">
                                 <h3 class="m-t-none m-b">Enter Provider Name and Other Criteria</h3>
 
                                 <div class="form-group">
@@ -118,7 +119,7 @@
                                            placeholder="Last Name"
                                            ng-model="ProviderLookupSearchVm.plsQueryParameters.lastname"
                                            ng-change="ProviderLookupSearchVm.lastnameChanged()"
-                                           ng-disabled="providerSearchForm.providerFacilityName.$viewValue"
+                                           ng-disabled="ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerFacilityName')"
                                            ng-required="!ProviderLookupSearchVm.plsQueryParameters.facilityname"
                                            ng-minlength="ProviderLookupSearchVm.formMinlength"
                                            ng-maxlength="ProviderLookupSearchVm.formMaxlength"/>
@@ -172,7 +173,7 @@
                                     </div>
                                 </div>
                                 <div class="info-blue italic m-b"
-                                     ng-if="providerSearchForm.providerFacilityName.$viewValue">
+                                     ng-if="ProviderLookupSearchVm.formViewValue(providerSearchForm, 'providerFacilityName')">
                                     Please clear "Facility Name" information to add "Enter Provider Name and Other
                                     Criteria" information.
                                 </div>
@@ -181,7 +182,7 @@
                                 <p>OR</p>
                             </div>
                             <div class="col-sm-5"
-                                 ng-class="{'light-grey': providerSearchForm.providerLastName.$viewValue}">
+                                 ng-class="{'light-grey': ProviderLookupSearchVm.formViewValue(providerSearchForm,'providerLastName')}">
 
                                 <h3 class="m-t-none m-b">Facility Name</h3>
 
@@ -194,7 +195,7 @@
                                            ng-maxlength="ProviderLookupSearchVm.formMaxlength"
                                            ng-required="!ProviderLookupSearchVm.plsQueryParameters.lastname"
                                            name="providerFacilityName"
-                                           ng-disabled="providerSearchForm.providerLastName.$viewValue"/>
+                                           ng-disabled="ProviderLookupSearchVm.formViewValue(providerSearchForm,'providerLastName')"/>
 
                                     <div ng-messages="providerSearchForm.providerFacilityName.$error"
                                          class="text-alert" role="alert">
@@ -203,7 +204,7 @@
                                         <!--<div ng-message="required">Required</div>-->
                                     </div>
                                     <div class="info-blue italic m-b"
-                                         ng-if="providerSearchForm.providerLastName.$viewValue">
+                                         ng-if="ProviderLookupSearchVm.formViewValue(providerSearchForm,'providerLastName')">
                                         Please clear "Enter Provider Name and Other Criteria" information to add
                                         "Facility Name" information.
                                     </div>
